--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,8 +1,17 @@
-<h2>Login</h2>
-<form (submit)="login()">
-  <label for="username">Username:</label>
-  <input type="text" id="username" [(ngModel)]="username" name="username" required>
-  <label for="password">Password:</label>
-  <input type="password" id="password" [(ngModel)]="password" name="password" required>
-  <button type="submit">Login</button>
-</form>
+<div class="form-page">
+  <div class="form-container">
+    <h2>Log In</h2>
+    <form (submit)="login()">
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" [(ngModel)]="username" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" name="password" [(ngModel)]="password" required>
+      </div>
+      <button type="submit">Log In</button>
+      <button type="button" (click)="goBack()">Back</button>
+    </form>
+  </div>
+</div>
