--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,18 +1,18 @@
 <div class="form-page">
   <div class="form-container">
     <h2>Register</h2>
-    <form>
+    <form (ngSubmit)="register()"> 
       <div class="form-group">
         <label for="username">Username</label>
-        <input type="text" id="username" name="username" required>
+        <input type="text" id="username" name="username" [(ngModel)]="username" required>
       </div>
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" [(ngModel)]="email" required>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" [(ngModel)]="password" required>
       </div>
       <button type="submit">Register</button>
       <button type="button" (click)="goBack()">Back</button>
