--- a/frontend/src/app/add-expense/add-expense.component.html
+++ b/frontend/src/app/add-expense/add-expense.component.html
@@ -1,8 +1,11 @@
-<h2>Add Expense</h2>
-<form (submit)="addExpense()">
-  <label for="amount">Amount:</label>
-  <input type="number" id="amount" [(ngModel)]="amount" name="amount" required>
-  <label for="description">Description:</label>
-  <input type="text" id="description" [(ngModel)]="description" name="description" required>
-  <button type="submit">Add Expense</button>
-</form>
+<div class="form-group">
+  <label for="description">Description</label>
+  <input type="text" id="description" [(ngModel)]="description" name="description" class="form-control" required>
+</div>
+
+<div class="form-group">
+  <label for="amount">Amount</label>
+  <input type="number" id="amount" [(ngModel)]="amount" name="amount" class="form-control" required>
+</div>
+
+<button type="button" (click)="addExpense()">Add Expense</button>
