--- a/frontend/src/app/initial-setup/initial-setup.component.html
+++ b/frontend/src/app/initial-setup/initial-setup.component.html
@@ -1,22 +1,31 @@
-<div class="setup-container">
+<div class="container">
+  <h2>Initial Setup</h2>
+
+  <!-- Form for Initial Income -->
   <form [formGroup]="incomeForm" (ngSubmit)="onSubmitIncome()">
-    <label for="initialIncome">Enter Initial Income:</label>
-    <input id="initialIncome" formControlName="initialIncome" type="number">
-    <button type="submit">Submit Income</button>
     <div *ngIf="incomeErrorMessage" class="error-message">{{ incomeErrorMessage }}</div>
     <div *ngIf="incomeSuccessMessage" class="success-message">{{ incomeSuccessMessage }}</div>
+    <div>
+      <label for="amount">Initial Income:</label>
+      <input type="number" id="amount" formControlName="amount" required>
+    </div>
+    <button type="submit">Save Initial Income</button>
   </form>
 
-  <form [formGroup]="savingsForm" (ngSubmit)="onSubmitSavingsGoal()" *ngIf="incomeSubmitted">
-    <label for="savingsGoal">Set Savings Goal Percentage:</label>
-    <input id="savingsGoal" formControlName="savingsGoal" type="number">
-    <button type="submit">Submit Savings Goal</button>
+  <!-- Form for Savings Goal -->
+  <form [formGroup]="savingsForm" (ngSubmit)="onSubmitSavingsGoal()" *ngIf="incomeSubmitted && !savingsSubmitted">
     <div *ngIf="savingsErrorMessage" class="error-message">{{ savingsErrorMessage }}</div>
     <div *ngIf="savingsSuccessMessage && !savingsSubmitted" class="success-message">{{ savingsSuccessMessage }}</div>
+    <div>
+      <label for="savingsGoalPercentage">Savings Goal Percentage:</label>
+      <input type="number" id="savingsGoalPercentage" formControlName="savingsGoalPercentage" required>
+    </div>
+    <button type="submit">Set Savings Goal</button>
   </form>
 
+  <!-- Message after Savings Goal is set -->
   <div *ngIf="savingsSubmitted">
     <div class="success-message">{{ savingsSuccessMessage }}</div>
-    <button (click)="onStart()">Let's Get Started</button>
+    <button (click)="onStart()">Continue</button>
   </div>
 </div>
