--- a/frontend/src/app/dashboard/dashboard.component.css
+++ b/frontend/src/app/dashboard/dashboard.component.css
@@ -1,26 +1,111 @@
 .container {
-  max-width: 800px;
+  max-width: 1300px;
   margin: 0 auto;
   padding: 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+}
+
+.financial-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-top: 100px;
+
+}
+
+.financial-message {
+  align-self: flex-start;
+  font-size: 4em;
+  font-weight: bold;
+  color: #a54c87;
+  margin: 140px 0;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+
+}
+
+.financial-message span {
+  display: block;
+  margin-bottom: 35px;
+
+}
+
+.icon-container {
+  margin-left: auto;
+  align-self: flex-start;
+
+}
+
+.icon-container i {
+  font-size: 20em;
+  color: #a54c87;
+
+}
+
+.definitions-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  width: 100%;
+  margin-top: 30px;
+
+}
+
+.definition {
+  background:rgba(249, 249, 249, 0.8);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: left;
+
+}
+
+.definition h2 {
+  font-size: 2em;
+  color: #a54c87;
+  margin-bottom: 10px;
+
+}
+
+.definition p {
+  font-size: 1.2em;
+  color: #333;
+  line-height: 1.6em;
 }
 
 .user-info {
   margin-bottom: 20px;
   font-size: 1.2em;
+
 }
 
 .welcome-message {
   font-size: 2em;
   margin-bottom: 20px;
   color: #007bff;
+
 }
 
 .actions-menu {
-  margin-top: 30px;
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  margin: 30px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+
+}
+
+.container h1 {
+  font-size: 4em;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  color: #ff69b4;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  text-align: center;
+
 }
 
 .actions-menu h2 {
@@ -28,21 +113,29 @@
   margin-bottom: 20px;
   font-size: 1.5em;
   color: #333;
+
+
 }
 
 .actions-menu ul {
   list-style: none;
   padding: 0;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  gap: 10px;
+
 }
 
 .actions-menu li {
   margin-bottom: 10px;
+
 }
 
 .actions-menu a {
   display: block;
   padding: 10px 20px;
-  background-color: #007bff;
+  background-color: #ff69b4;
   color: white;
   text-align: center;
   text-decoration: none;
@@ -51,5 +144,6 @@
 }
 
 .actions-menu a:hover {
-  background-color: #0056b3;
+  background-color: #a54c87;
+
 }
