--- a/frontend/src/app/initial-setup/initial-setup.component.css
+++ b/frontend/src/app/initial-setup/initial-setup.component.css
@@ -1,42 +1,77 @@
 .setup-container {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
+  max-width: 550px;
+  margin: 80px auto;
+  padding: 30px;
+  border: 0px solid #ccc;
   border-radius: 8px;
   background-color: #f9f9f9;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+
+}
+.page-header {
+  margin-bottom: 30px;
+
 }
 
-form {
+.page-header h1 {
+  font-size: 2.5em;
+  color: #ff69b4;
+  text-align: center;
+}
+
+.page-header p {
+  font-size: 1.2em;
+  color: #a54c87;
+  text-align: center;
+}
+
+.setup-container label {
+  font-size: 2em;
+  color: #ff69b4;
   margin-bottom: 20px;
+  text-align: center;
+  display: block;
+
+
 }
 
 .error-message {
   color: red;
   margin-top: 10px;
+
 }
 
 .success-message {
-  color: green;
+  color: #a54c87;
   margin-top: 10px;
+
 }
 
-input, button {
+input,
+button {
   display: block;
   width: 100%;
   margin-bottom: 10px;
   padding: 10px;
   font-size: 16px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-sizing: border-box;
+
 }
 
 button {
-  background-color: #007bff;
+  background-color: #ff69b4;
   color: #fff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin-top: 10px;
+
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #a54c87;
+
 }
