--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -69,7 +69,7 @@
 }
 
 .form-container button:hover {
-  background-color: #ffcc00; /* Slightly darker mustard yellow on hover */
+  background-color: #a54c87; 
 }
 
 /* Additional styles for a professional look */
@@ -82,4 +82,12 @@
   margin-bottom: 5px;
   color: #333;
   font-weight: bold;
+}
+
+.error-message {
+  color: #ff69b4;
+  font-size:2em;
+  margin-top: 7% ;
+  text-shadow:none;
+  line-height: 1.2;
 }
