--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -3,12 +3,10 @@
     <h2>Log In</h2>
     <form (ngSubmit)="login()">
       <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" [(ngModel)]="username" required>
+        <input type="text" id="username" name="username" [(ngModel)]="username" required placeholder="Username">
       </div>
       <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" [(ngModel)]="password" required>
+        <input type="password" id="password" name="password" [(ngModel)]="password" required placeholder="Password">
       </div>
       <button type="submit">Log In</button>
       <button type="button" (click)="goBack()">Back</button>
