--- a/frontend/src/app/register/register.component.css
+++ b/frontend/src/app/register/register.component.css
@@ -69,7 +69,7 @@
   }
   
   .form-container button:hover {
-    background-color: #ffcc00; /*  yellow on hover */
+    background-color: #a54c87; /* hover */
   }
   
   
@@ -82,4 +82,12 @@
     margin-bottom: 5px;
     color: #333;
     font-weight: bold;
+  }
+  
+  .error-message {
+    color: #ff69b4;
+    font-size:2em;
+    margin-top: 7% ;
+    text-shadow:none;
+    line-height: 1.2;
   }
