--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -3,16 +3,13 @@
     <h2>Register</h2>
     <form (ngSubmit)="register()">
       <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" [(ngModel)]="username" required>
+        <input type="text" id="username" name="username" [(ngModel)]="username" required placeholder="Username">
       </div>
       <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" [(ngModel)]="email" required>
+        <input type="email" id="email" name="email" [(ngModel)]="email" required placeholder="Email">
       </div>
       <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" [(ngModel)]="password" required>
+        <input type="password" id="password" name="password" [(ngModel)]="password" required placeholder="Password">
       </div>
       <button type="submit">Register</button>
       <button type="button" (click)="goBack()">Back</button>
@@ -20,3 +17,4 @@
     <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
   </div>
 </div>
+
