--- a/frontend/src/app/welcome/welcome.component.html
+++ b/frontend/src/app/welcome/welcome.component.html
@@ -1,6 +1,4 @@
 <div class="welcome-container">
-  <h1>Welcome!</h1>
-  <p>We're glad to have you here. Here's a motivational quote to get you started:</p>
-  <blockquote>"The journey of a thousand miles begins with one step." - Lao Tzu</blockquote>
-  <button (click)="onProceed()">Get Started</button>
+  <h1>Successfully registered</h1>
+  <button class="get-started-button" (click)="onProceed()">Get Started</button>
 </div>
