--- a/frontend/src/app/add-income/add-income.component.css
+++ b/frontend/src/app/add-income/add-income.component.css
@@ -1,13 +1,105 @@
-form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  label, input {
-    margin: 5px 0;
-  }
-  
-  button {
-    margin-top: 10px;
-  }
-  
+.container {
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  margin: 100px 0 0 300px;
+  text-align: center;
+
+}
+
+.motivating-quote {
+  position: absolute;
+  align-self: flex-start;
+  font-size: 2.7em;
+  font-weight: bold;
+  color: #a54c87;
+  margin: 0 250px 0 850px;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  line-height: 1.3;
+  font-style: italic;
+  top: 170px;
+  right: 20px;
+}
+
+.container h2 {
+  text-align: center;
+  color: #a54c87;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  color: #333;
+  font-weight: bold;
+
+}
+
+.container button {
+  background-color: #ff69b4;
+  border: none;
+  color: white;
+  padding: 15px 20px;
+  text-align: center;
+  font-size: 1.2em;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+  transition: background-color 0.3s ease;
+}
+
+.container button:hover {
+  background-color: #a54c87;
+
+}
+
+.form-group input {
+  width: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button.btn-secondary {
+  background-color: #6c757d;
+}
+
+button:disabled {
+  background-color: #c0c0c0;
+  cursor: not-allowed;
+}
+
+.alert {
+  padding: 10px;
+  border-radius: 4px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.alert-success {
+  color: #a54c87;
+  background-color: transparent;
+}
+
+.alert-danger {
+  color: red;
+  margin-top: 10px;
+
+}
