--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,14 +1,15 @@
-body, html {
+body,
+html {
     height: 100%;
     margin: 0;
     font-family: 'Arial', sans-serif;
-    background-color:#f8def8;
+    background-color: #f8def8;
 }
 
 /* Container for the landing page */
 .landing-page {
     position: relative;
-    background-image: url('assets/colorful-seamless-pattern-with-illustrations-about-business-with-money-coins-dollar-percent_649043-31.jpg'); 
+    background-image: url('assets/colorful-seamless-pattern-with-illustrations-about-business-with-money-coins-dollar-percent_649043-31.jpg');
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -27,7 +28,7 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6); 
+    background: rgba(0, 0, 0, 0.6);
     z-index: 1;
 }
 
@@ -96,7 +97,7 @@ h1 {
 /* Hover effect for action buttons */
 .action-button:hover {
     transform: translateY(-2px);
-    background-color: #a54c87; 
+    background-color: #a54c87;
 }
 
 /* Underline effect for heading */
@@ -108,6 +109,7 @@ h1::after {
     background: #a54c87;
     margin: 10px auto 0;
     border-radius: 2px;
+
 }
 
 /* Underline effect for intro text */
@@ -120,3 +122,4 @@ h1::after {
     margin: 10px auto;
     border-radius: 2px;
 }
+
