--- a/frontend/src/app/overview/overview.component.html
+++ b/frontend/src/app/overview/overview.component.html
@@ -8,21 +8,9 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>Groceries</td>
-        <td>200</td>
-      </tr>
-      <tr>
-        <td>Rent</td>
-        <td>1200</td>
-      </tr>
-      <tr>
-        <td>Utilities</td>
-        <td>150</td>
-      </tr>
-      <tr>
-        <td>Entertainment</td>
-        <td>100</td>
+      <tr *ngFor="let expense of overview">
+        <td>{{ expense.category }}</td>
+        <td>{{ expense.amount }}</td>
       </tr>
     </tbody>
   </table>
