--- a/frontend/src/app/add-expense/add-expense.component.html
+++ b/frontend/src/app/add-expense/add-expense.component.html
@@ -8,7 +8,7 @@
     <div class="form-group">
       <label for="category">Category</label>
       <select id="category" formControlName="category" class="form-control">
-        <option *ngFor="let category of categories" [value]="category">{{ category }}</option>
+        <option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</option>
       </select>
     </div>
     <button type="submit" class="btn btn-primary" [disabled]="!expenseForm.valid">Add Expense</button>
