--- a/frontend/src/app/motivation-modal/motivation-modal.component.html
+++ b/frontend/src/app/motivation-modal/motivation-modal.component.html
@@ -1,6 +1,6 @@
 <div class="modal-content">
   <div class="modal-header">
-    <h5 class="modal-title">Motivational Quote</h5>
+    <h5 class="modal-title">Quote</h5>
     <button type="button" class="close" aria-label="Close" (click)="onClose()">
       <span aria-hidden="true">&times;</span>
     </button>
