Overview and savings functionality

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -25,7 +25,7 @@
       </ul>
     </div>
     <div class="icon-container">
-      <i class="fas fa-piggy-bank"></i> <!-- Correct Font Awesome class -->
+      <i class="fas fa-piggy-bank"></i> 
     </div>
     <div class="financial-message">
       We help you to keep<br>an eye on your finances!
