--- a/frontend/src/app/add-expense/add-expense.component.css
+++ b/frontend/src/app/add-expense/add-expense.component.css
@@ -1,31 +1,89 @@
 .container {
-  max-width: 600px;
-  margin: 0 auto;
   padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  margin: 100px auto;
+  text-align: center;
 }
 
-.input-section {
+.container h2 {
+  text-align: center;
+  color: #a54c87;
+}
+
+.form-group {
   margin-bottom: 20px;
 }
 
-.error-message {
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  color: #333;
+  font-weight: bold;
+}
+
+.container input, 
+.container select {
+  width: 100%;
+  padding: 15px;
+  margin-top: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 1.2em;
+}
+
+.container button {
+  background-color: #ff69b4;
+  border: none;
+  color: white;
+  padding: 15px 20px;
+  text-align: center;
+  font-size: 1.2em;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+  transition: background-color 0.3s ease;
+  margin-top: 10px;
+}
+
+.container button:hover {
+  background-color: #a54c87;
+}
+
+button.btn-secondary {
+  background-color: #ff69b4;
+}
+
+button.btn-secondary:hover {
+  background-color: #a54c87;
+}
+
+button:disabled {
+  background-color: #c0c0c0;
+  cursor: not-allowed;
+}
+
+.alert {
+  padding: 10px;
+  border-radius: 4px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.alert-success {
+  color: #a54c87;
+  background-color: transparent;
+}
+
+.alert-danger {
   color: red;
   margin-top: 10px;
 }
 
-.success-message {
-  color: green;
-  margin-top: 10px;
-}
-
-button {
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #0056b3;
+.text-danger {
+  color: red;
+  font-size: 1em;
 }
