--- a/frontend/src/app/add-income/add-income.component.html
+++ b/frontend/src/app/add-income/add-income.component.html
@@ -21,3 +21,4 @@
   More important than the "how" we achieve financial freedom, is the "why".<br>Find your reasons why you want to be free
   and wealthy! - Robert Kiyosaki
 </div>
+<div class="dot-container"></div>
