--- a/frontend/src/app/add-expense/add-expense.component.css
+++ b/frontend/src/app/add-expense/add-expense.component.css
@@ -4,8 +4,9 @@
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   max-width: 400px;
-  margin: 100px auto;
+  margin: 50px auto;
   text-align: center;
+  margin-top: 25px;
 }
 
 .container h2 {
@@ -21,10 +22,9 @@
   display: block;
   margin-bottom: 5px;
   color: #333;
-  font-weight: bold;
 }
 
-.container input, 
+.container input,
 .container select {
   width: 100%;
   padding: 15px;
@@ -86,4 +86,37 @@ button:disabled {
 .text-danger {
   color: red;
   font-size: 1em;
+}
+
+.tips-container {
+  max-width: 1500px;
+  margin: 10px auto 90px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;/
+}
+
+.tip {
+  width: 30%;
+  margin-bottom: 20px;
+  margin-left: calc((100% - 90%) / 6);
+  margin-right: calc((100% - 90%) / 6);
+  background: rgba(249, 249, 249, 0.8);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: left
+}
+
+.tip h2 {
+  font-size: 1.5em;
+  color: #a54c87;
+  margin-bottom: 10px;
+}
+
+.tip p {
+  font-size: 1.1em;
+  color: #333;
+  line-height: 1.6em;
 }
