--- a/frontend/src/app/add-income/add-income.component.css
+++ b/frontend/src/app/add-income/add-income.component.css
@@ -4,7 +4,7 @@
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   max-width: 400px;
-  margin: 100px 0 0 300px;
+  margin: 180px 0 0 350px;
   text-align: center;
 
 }
@@ -19,8 +19,9 @@
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
   line-height: 1.3;
   font-style: italic;
-  top: 170px;
-  right: 20px;
+  top: 250px;
+  right: 5px;
+
 }
 
 .container h2 {
@@ -101,5 +102,26 @@ button:disabled {
 .alert-danger {
   color: red;
   margin-top: 10px;
+
+}
+
+.dot-container {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  background: color 0;
+  ;
+}
+
+.dot-container::before {
+  content: "";
+  position: absolute;
+  right: 50px;
+  left: 50%;
+  transform: translate(-50%);
+  width: 2000px;
+  height: 2000px;
+  background-color: #a54c87;
+  border-radius: 50%;
 
 }
