--- a/frontend/src/app/overview/overview.component.css
+++ b/frontend/src/app/overview/overview.component.css
@@ -125,3 +125,21 @@
 .btn:hover {
   background-color: #a54c87;
 }
+.dot-container {
+  position: relative;
+  width: 100px;
+  height: 100px; 
+  background: color 0;;
+}
+
+.dot-container::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 2000px; 
+  height: 2000px; 
+  background-color: #a54c87;
+  border-radius: 50%; 
+}
