--- a/frontend/src/app/savings/savings.component.css
+++ b/frontend/src/app/savings/savings.component.css
@@ -1,46 +1,74 @@
+.savings-background {
+  /* Set the background image */
+  background-image: url('assets/chen-mizrach-jL6PTWI7h18-unsplash.jpg');
+
+  /* Adjust background properties */
+  background-size: cover;
+  /* Cover the entire page */
+  background-position: center;
+  /* Center the image */
+  background-repeat: no-repeat;
+  /* Prevent repeating of the image */
+
+}
+
 .container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    background: #ffffff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-  }
-  
-  h2 {
-    text-align: center;
-    color: #a54c87;
-    margin-top: 20px;
-    font-size: 2em;
-    position: relative;
-  }
-  
-  p {
-    font-size: 1.2em;
-    color: #333;
-    line-height: 1.6em;
-  }
-  
-  .btn {
-    background-color: #ff69b4;
-    border: none;
-    color: white;
-    padding: 15px 20px;
-    text-align: center;
-    font-size: 1.2em;
-    border-radius: 5px;
-    cursor: pointer;
-    width: 100%;
-    transition: background-color 0.3s ease;
-    display: block;
-    margin: 20px auto 0;
-    max-width: 200px;
-  }
-  
-  .btn:hover {
-    background-color: #a54c87;
-  }
-  
+  width: 2000px;
+  height: 900px;
+  margin: 1000x;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 8px;
+
+}
+
+h2 {
+  text-align: center;
+  color: #a54c87;
+  margin-top: 20px;
+  font-size: 2.5em;
+  position: relative;
+
+}
+
+h2::after {
+  content: '';
+  display: block;
+  width: 100px;
+  height: 5px;
+  background: #a54c87;
+  margin: 10px auto 0;
+  border-radius: 2px;
+
+}
+
+p {
+  font-size: 2.5em;
+  color: #f8f5f5;
+  line-height: 1.6em;
+  text-transform: bold;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  text-align: center
+}
+
+.btn {
+  background-color: #ff69b4;
+  border: none;
+  color: white;
+  padding: 15px 20px;
+  text-align: center;
+  font-size: 1.2em;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+  transition: background-color 0.3s ease;
+  display: block;
+  margin: 20px auto 0;
+  max-width: 200px;
+}
+
+.btn:hover {
+  background-color: #a54c87;
+}
