--- a/frontend/src/app/savings/savings.component.html
+++ b/frontend/src/app/savings/savings.component.html
@@ -1,10 +1,10 @@
-<div class="container">
-    <h2>Savings Status</h2>
-    <div *ngIf="savingsStatus">
-      <p>At the moment, your savings percentage is <strong>{{ savingsStatus.savingsPercentage }}%</strong> and you have saved <strong>{{ savingsStatus.savingsAmount }} euros</strong>.</p>
-      <p>{{ savingsStatus.message }}</p>
-      <p *ngIf="savingsStatus.advice">{{ savingsStatus.advice }}</p>
-    </div>
-    <button class="btn btn-secondary mt-3" (click)="goBack()">Back</button>
+<body class="container savings-background">
+  <h2>Savings Status</h2>
+  <div *ngIf="savingsStatus">
+    <p>At the moment, your savings percentage is <strong>{{ savingsStatus.savingsPercentage }}%</strong> and you have
+      saved <strong>{{ savingsStatus.savingsAmount }} euros</strong>.</p>
+    <p>{{ savingsStatus.message }}</p>
+    <p *ngIf="savingsStatus.advice">{{ savingsStatus.advice }}</p>
   </div>
-  
+  <button class="btn btn-secondary mt-3" (click)="goBack()">Back</button>
+</body>
